# orc_modeling

./: .gitignore  Cape2_ORC_FeedPumpCurveData.xlsx  environment.yml  example_config.json  pyproject.toml  pytest.ini
docs/: fluid_property_backends.md
orc_modeling/core/: evaluate.py  solver.py  types.py
orc_modeling/fluidprops/: __init__.py  base.py  coolprop_backend.py  refprop_backend.py  thermo_backend.py
orc_modeling/io/: pump_curves.py
orc_modeling/pumps/: __init__.py  banks.py  configurations.py  curves.py  results.py  sizing.py  speed_sweep.py
orc_modeling/scripts/: compare_speed_of_sound.py  inspect_thermo_flash.py  mixtures.py  plot_vendor_curve.py  plotly_test.py  plt_test.py  pump_sizing_report.py  quick_c3.py  test_pump_results.py
orc_modeling/tests/: scratch.py  test_evaluate.py  test_mixtures.py  toy_context.py
orc_modeling/utilities/: units.py
orc_modeling/viz/: __init__.py  diagrams.py  diagrams_plotly.py  pumpcurves_plotly.py
reliability/: monte_carlo_simple.py
